--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <title>Vibe with Jishnu</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="theme-color" content="#0a0f2e"> 
+
 <style>
 /* PAGE THEME */
 body {
@@ -317,7 +322,7 @@ const songAnimations = {
     "Happy Birthday Megharajan": "#a600ff",
     
     // UPDATED: Use Display Names as keys
-    "Bomb (Endhu 1cm)": "#ff3300",         
+    "Bomb (Endhu 1cm)": "#ff3300",          
     "Sanjai's room (Endhu 1cm)": "#ff00cc",
 
     "default": "#6a5bff"
