--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="manifest" href="manifest.json">
 <meta charset="UTF-8">
 <title>Vibe with Jishnu</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -542,3 +543,4 @@ function formatTime(s) {
 
 </body>
 </html>
+
