--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ input[type="range"]::-webkit-slider-thumb:hover { transform: scale(1.3); }
 </style>
 </head>
 <body class="">
-
+    
 <div id="bass-bg"></div>
 
 <header>
@@ -540,7 +540,22 @@ function formatTime(s) {
     return min + ":" + sec;
 }
 </script>
-
+<script>
+/* MAGIC FULL SCREEN SCRIPT */
+document.addEventListener('click', function() {
+    var el = document.documentElement;
+    if (el.requestFullscreen) {
+        el.requestFullscreen();
+    } else if (el.mozRequestFullScreen) {
+        el.mozRequestFullScreen();
+    } else if (el.webkitRequestFullscreen) {
+        el.webkitRequestFullscreen();
+    } else if (el.msRequestFullscreen) {
+        el.msRequestFullscreen();
+    }
+}, { once: true });
+</script>
 </body>
 </html>
+
 
