--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ const artists = {
     "Jishnu Anthem Karoke": "G.R.Adhavh",
     
     // HITS & NEW SONGS
-    "Harishankar ku irukka": "Kavinraaj, G.R.Adhavh",
+    "Harishankar ku irukka?": "Kavinraaj, G.R.Adhavh",
     "Happy Birthday Megharajan": "G.R.Adhavh",
     
     // UPDATED: Use Display Names as keys
@@ -575,3 +575,4 @@ document.addEventListener('click', function() {
 </script>
 </body>
 </html>
+
