--- a/index.html
+++ b/index.html
@@ -337,7 +337,8 @@ const playlists = {
         "Hyper Harishankar(LOT-III).mp3",
         "Intermission(LOT-III).mp3",
         "Jishnu Anthem Reprise(LOT-III).mp3",
-        "Jishnu vs Annas(LOT-III).mp3",
+        "The fight(LOT-III).mp3",
+        "King in the universe(LOT-III).mp3",
         "King vs Harold(LOT-III).mp3",
         "LOT-III teaser concert(LOT-III).mp3",
         "LOT-III Theme(LOT-III).mp3",
@@ -575,4 +576,5 @@ document.addEventListener('click', function() {
 </script>
 </body>
 </html>
+
 
