--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ body {
     overflow-x: hidden;
     position: relative;
     min-height: 100vh;
+    transition: background 0.5s ease;
 }
 
 /* --- THE BEATING HEART BACKGROUND --- */
@@ -526,11 +527,22 @@ function closePopup() {
     // Stop visuals
     stopVisuals();
     
+    // Reset Background to Normal (Default)
+    resetTheme();
+
     // Update play button to 'paused' state (triangle)
     animatePlayButton();
     
     // Stop wave animation
     toggleWave(); 
+}
+
+/* RESET THEME TO DEFAULT */
+function resetTheme() {
+    document.body.style.background = "#0a0f2e";
+    document.documentElement.style.setProperty('--song-color', '#6a5bff');
+    document.querySelector(".player").style.borderColor = "#6a5bff";
+    document.querySelectorAll("#soundwave div").forEach(w => w.style.background = "#6a5bff");
 }
 
 /* VISUALS */
