--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@ const artists = {
     "Saavachuruven unna(LOT-III)": "Jishnu, G.R.Adhavh, Sanjai",
     "Sivagasi's Daaha(LOT-III)": "G.R.Adhavh, Shreyas",
     "The namechange(LOT-III)": "Kavinraaj, G.R.Adhavh",
+    "Flute anthem(LOT-III)": "G.R.Adhavh",
     
     // 50 SHADES
     "Jishnu Anthem": "G.R.Adhavh",
@@ -333,6 +334,7 @@ const songAnimations = {
     "Saavachuruven unna(LOT-III)": "#4dd6ff",
     "Sivagasi's Daaha(LOT-III)": "#ffa600",
     "The namechange(LOT-III)": "#bb6bff",
+    "Flute anthem(LOT-III)": "#00ffbf",
     
     // 50 Shades Colors
     "Jishnu Anthem": "#00ff88",
@@ -368,7 +370,8 @@ const playlists = {
         "Saavachuruven unna(LOT-III).mp3",
         "Sivagasi's Daaha(LOT-III).mp3",
         "The namechange(LOT-III).mp3",
-        "Vadakku Sadhuram il Jishnu(LOT-III).mp3"
+        "Vadakku Sadhuram il Jishnu(LOT-III).mp3",
+        "Flute anthem(LOT-III).mp3"
     ],
     list2: [
         "Jishnu Anthem.mp3",
