--- a/index.html
+++ b/index.html
@@ -430,8 +430,6 @@ for(let id in playlists){
         if(clean === "Harishankar ku irukka") displayName = "Harishankar ku irukka?";
         if(clean === "Bomb") displayName = "Bomb (Endhu 1cm)";
         if(clean === "Sanjai") displayName = "Sanjai's room (Endhu 1cm)";
-        
-        // FIX: Display as LOT-III version but file is just "Flute anthem"
         if(clean === "Flute anthem") displayName = "Flute anthem(LOT-III)";
         
         // Use displayName to lookup Artist
@@ -649,19 +647,22 @@ function formatTime(s) {
 }
 </script>
 <script>
-/* MAGIC FULL SCREEN SCRIPT */
-document.addEventListener('click', function() {
-    var el = document.documentElement;
-    if (el.requestFullscreen) {
-        el.requestFullscreen();
-    } else if (el.mozRequestFullScreen) {
-        el.mozRequestFullScreen();
-    } else if (el.webkitRequestFullscreen) {
-        el.webkitRequestFullscreen();
-    } else if (el.msRequestFullscreen) {
-        el.msRequestFullscreen();
-    }
-}, { once: true });
+/* MAGIC FULL SCREEN SCRIPT - APP MODE ONLY */
+// Check if running in Standalone (App) Mode
+if (window.matchMedia('(display-mode: standalone)').matches) {
+    document.addEventListener('click', function() {
+        var el = document.documentElement;
+        if (el.requestFullscreen) {
+            el.requestFullscreen();
+        } else if (el.mozRequestFullScreen) { /* Firefox */
+            el.mozRequestFullScreen();
+        } else if (el.webkitRequestFullscreen) { /* Chrome, Safari and Opera */
+            el.webkitRequestFullscreen();
+        } else if (el.msRequestFullscreen) { /* IE/Edge */
+            el.msRequestFullscreen();
+        }
+    }, { once: true });
+}
 </script>
 </body>
 </html>
